Try to fix header breaking on mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -86,7 +86,9 @@ body {
 }
 
 body .btn, body>header h1, body article header h1, body>footer .details h4, body .post-footer .details h4, body #share_modal header a.close, body.user article.feature h1 a {
-    font-family: "Ubuntu", "Helvetica Neue", "Helvetica-Neue", helvetica, sans-serif
+  font-family: "Ubuntu", "Helvetica Neue", "Helvetica-Neue", helvetica, sans-serif
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 .highlight .c {
